--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <script src="https://kit.fontawesome.com/7896a1d885.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="pro1.css">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -183,6 +183,6 @@
         </div>
     </div>
     </footer>
-    <script src="pro1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
